--- a/front-end/index/logIn.html
+++ b/front-end/index/logIn.html
@@ -3,35 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Login & Sign-Up</title>
     <link rel="stylesheet" href="../styling/loginStyle.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <div class="main-container">
-        <!-- Left part: Logo and text -->
-        <div class="left-part">
-            <img src="../resources/logo/logo.png" alt="logo" class="logo">
-            <h1>Welcome to Our Platform</h1>
-            <p>Access all the features you need by logging in. If you don't have an account, feel free to sign up and start your journey with us!</p>
+    <div class="container" id="container">
+        <!-- Sign-Up Form -->
+        <div class="form-container sign-up-container">
+            <form action="#" id="signUpForm">
+                <h1>Create Account</h1>
+                <input type="text" name="fname" placeholder="First Name" required />
+                <input type="text" name="lname" placeholder="Last Name" required />
+                <input type="text" name="username" placeholder="User Name" required />
+                <input type="email" name="email" placeholder="Email" required />
+                <input type="password" name="password" placeholder="Password" required />
+                <button id="SignUp-btn"  type="submit">Sign Up</button>
+            </form>
         </div>
-        
-        <!-- Right part: Login form -->
-        <div class="right-part">
-            <div class="form-container">
-                <form>
-                    <h2>Login</h2>
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" placeholder="Enter your username" required>
 
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" placeholder="Enter your password" required>
+        <!-- Login Form -->
+        <div class="form-container login-container">
+            <form action="#" id="LoginForm">
+                <h1>Log In</h1>
+                <input type="text" name="username" placeholder="Username" required />
+                <input type="password" name="password" placeholder="Password" required />
+                <button id="Login-btn" type="submit">Login</button>
+            </form>
+        </div>
 
-                    <input type="submit" value="Login">
+        <!-- Overlay -->
+        <div class="overlay-container">
+            <div class="overlay">
+                <!-- Overlay Left (Login Prompt) -->
+                <div class="overlay-panel overlay-left">
+                    <img src="../resources/logo/logo.png" alt="Logo" class="logo">
+                    <h1>Welcome Back!</h1>
+                    <p>To keep connected with us, please log in with your personal info</p>
+                    <button class="ghost" id="loginButton">Log In</button>
+                </div>
 
-                    <p class="signup-link">Don't have an account? <a href="signUp.html">Sign Up</a></p>
-                </form>
+                <!-- Overlay Right (Sign-Up Prompt) -->
+                <div class="overlay-panel overlay-right">
+                    <img src="../resources/logo/logo.png" alt="Logo" class="logo">
+                    <h1>Hello, Friend!</h1>
+                    <p>Enter your personal details and start your journey with us today</p>
+                    <button class="ghost" id="signUpButton">Sign Up</button>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- JavaScript -->
+    <script src="../script/main.js"></script>
+    <script src="../script/api.js"></script>
 </body>
 </html>
