Solving login logo problrms

--- a/front-end/index/logIn.html
+++ b/front-end/index/logIn.html
@@ -37,7 +37,7 @@
             <div class="overlay">
                 <!-- Overlay Left (Login Prompt) -->
                 <div class="overlay-panel overlay-left">
-                    <img src="../resources/logo/logo.png" alt="Logo" class="logo">
+                    <img src="../resources/logo/login-Logo.png" alt="Logo" class="logo">
                     <h1>Welcome Back!</h1>
                     <p>To keep connected with us, please log in with your personal info</p>
                     <button class="ghost" id="loginButton">Log In</button>
@@ -45,7 +45,7 @@
 
                 <!-- Overlay Right (Sign-Up Prompt) -->
                 <div class="overlay-panel overlay-right">
-                    <img src="../resources/logo/logo.png" alt="Logo" class="logo">
+                    <img src="../resources/logo/login-Logo.png" alt="Logo" class="logo">
                     <h1>Hello, Friend!</h1>
                     <p>Enter your personal details and start your journey with us today</p>
                     <button class="ghost" id="signUpButton">Sign Up</button>
