the home page starting code

--- a/front-end/index/homePage.html
+++ b/front-end/index/homePage.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="left-section">
-            <i class="material-icons logo">menu</i>
+            <i class="material-icons menu-icon">menu</i>
             <img class="logo" src="../resources/logo/logo.png" alt="logo">
         </div>
         <div class="mid-section">
@@ -28,7 +28,7 @@
     </header>
 
     <div class="content-area">
-        <aside>
+        <aside class="sidebar">
             <nav>
                 <a href="" class="nav-link active">
                     <i class="material-icons">home</i>
@@ -42,6 +42,22 @@
                 <hr>
             </nav>
         </aside>
+        <main>
+            <div class="welcome-section">
+                <h1>Welcome to Our Site!</h1>
+                <p>Explore our features, connect with the community, and enjoy our content.</p>
+                
+                <form>
+                    <input type="text" placeholder="search for cours" id="search2">
+                    <button type="button" ><i class="material-icons">search</i></button>
+                </form>
+            </div>
+
+            <div class="categories">
+          
+        </main>
     </div>
+
+    <script src="../script/homePage.js"></script>
 </body>
 </html>
