--- a/front-end/index/watchingPage.html
+++ b/front-end/index/watchingPage.html
@@ -39,7 +39,7 @@
           <div class="div-comments">
             <center>
               <div>
-                <input type="text" class="input-comment" />
+                <input title="HA" type="text" class="input-comment" />
                 <button class="btn-comment">Comment</button>
               </div>
             </center>
